fixed double scroll

--- a/main.css
+++ b/main.css
@@ -48,7 +48,7 @@
 
 body {
 	background-color: gray;
-	margin: 0;
+	margin: 1rem;
 
 	background-image: url("website\ background.png");
 	background-attachment: fixed;
@@ -125,11 +125,13 @@ header {
 	display: flex;
 	flex-wrap: nowrap;
 	align-items: center;
+	margin: 1rem;
 	opacity: 90%;
 }
 
 #top2timeLocation div {
 	margin: 0.5rem;
+	width: 50%;
 	height: 90%;
 	align-items: center;
 	justify-content: center;
@@ -154,15 +156,14 @@ header {
 
 /* CountDown */
 #countDown {
-	width: 100vw;
+	width: 100%;
 	display: flex;
 	flex-direction: column;
 	background: #5a86ad;
 	align-items: center;
 	justify-content: center;
 	border-radius: 0;
-	margin-top: 2rem;
-	margin-bottom: 2rem;
+
 	opacity: 92%;
 }
 
@@ -182,15 +183,4 @@ header {
 	opacity: 90%;
 	border-radius: 25rem;
 	padding: 1rem;
-}
-
-/* Web View */
-@media only screen and (min-width: 1000px) {
-	#top2timeLocation {
-		width: 50%;
-	}
-
-	#additionalInformation {
-		width: 50%;
-	}
 }
